--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,15 @@ body {
   font-weight: 500;
   box-shadow: 0px 0px 1px 1px #a5a5a5;
 }
+
+.counter:hover {
+  background-color: black;
+  
+  color: white;
+}
+
+.counter:active {
+  background-color: #631b09;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
