--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-  /* font-family: 'Righteous', cursive; */
   font-family: 'Poppins', sans-serif;
-  /* color: #d14f4f; */
   line-height: 1.7;
   font-size: 19px;
   background-color: #222222;
@@ -13,7 +11,18 @@ body {
   background-position: center;
 }
 
-/* navbar */
+
+@media only screen and (max-width: 1024px) {
+  body {
+    background-size: 100% 48%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-size: auto;
+  }
+}
 
 .navbar {
   background-color: rgba(22, 22, 22, 0.8);
@@ -49,7 +58,6 @@ body {
 
 .nasa-photo img {
   width: 100%;
-  /* margin-right: 50px; */
   object-fit: contain;
   max-height: 80vh;
   border-top-left-radius: 9px;
@@ -70,7 +78,6 @@ body {
 
 .nasa-photo .date {
   margin-top: 0;
-  /* margin-bottom: 30px; */
   font-size: .85em;
   margin: 0 0 7px 0;
 }
@@ -83,11 +90,30 @@ body {
   font-weight: 100;
 }
 
-
-@media (max-width: 1280px) {
-  .nasa-photo {
-    display: block;
+@media only screen and (max-width: 600px) {
+  .nasa-photo .explanation {
+    line-height: 18px;
+    font-size: 11px;
   }
+}
+
+  @media only screen and (max-width: 600px) {
+    .nasa-photo {
+      width: 19em;
+    }
+  }
+
+  @media only screen and (max-width: 420px) {
+    .nasa-photo {
+      width: 15em;
+    }
+  }
+
+  @media (max-width: 1280px) {
+    .nasa-photo {
+      display: block;
+      
+    }
 
   .nasa-photo img {
     width: 100%;
@@ -104,7 +130,7 @@ body {
 }
 
 .home-link{
-  font-size: 40px;
+  font-size: 15px;
   background: #00000073;
   display: inline-block;
   padding: 40px 80px;
@@ -120,7 +146,20 @@ body {
   background: #000000;
 }
 
+@media only screen and (max-width: 600px) {
+  .home-link {
+    background-size: auto;
+    font-size: 21px;
+  }
+}
 
+@media only screen and (max-width: 420px){
+.home-link {
+  font-size: 25px;
+  text-align: center;
+  line-height: 40px;
+}
+}
 
 
 
